--- a/nagisa-frontend/pom.xml
+++ b/nagisa-frontend/pom.xml
@@ -4,24 +4,17 @@
 	<parent>
 		<groupId>com.github.nuclearg.nagisa</groupId>
 		<artifactId>nagisa-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.nuclearg.nagisa</groupId>
-	<artifactId>nagisa-interceptor</artifactId>
-	<version>${nagisa.version}</version>
+	<artifactId>nagisa-frontend</artifactId>
+    <version>${nagisa.version}</version>
 
 	<packaging>jar</packaging>
-	<name>nagisa-lang</name>
+	<name>nagisa-frontend</name>
 
 	<dependencies>
-		<!-- nagisa -->
-		<dependency>
-			<groupId>com.github.nuclearg.nagisa</groupId>
-			<artifactId>nagisa-frontend</artifactId>
-			<version>${nagisa.version}</version>
-		</dependency>
-
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,11 +26,6 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
 		</dependency>
 	</dependencies>
 </project>
