--- a/nagisa-rtlib/pom.xml
+++ b/nagisa-rtlib/pom.xml
@@ -1,19 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.github.nuclearg.nagisa</groupId>
-		<artifactId>nagisa-parent</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.github.nuclearg.nagisa</groupId>
+        <artifactId>nagisa-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-	</parent>
+    </parent>
 
-	<groupId>com.github.nuclearg.nagisa</groupId>
-	<artifactId>nagisa-rtlib</artifactId>
+    <groupId>com.github.nuclearg.nagisa</groupId>
+    <artifactId>nagisa-rtlib</artifactId>
     <version>${nagisa.version}</version>
 
-	<packaging>jar</packaging>
-	<name>nagisa-rtlib</name>
+    <packaging>jar</packaging>
+    <name>nagisa-rtlib</name>
 
-	<dependencies>
-	</dependencies>
+    <dependencies>
+        <!-- nagisa -->
+        <dependency>
+            <groupId>com.github.nuclearg.nagisa</groupId>
+            <artifactId>nagisa-frontend</artifactId>
+            <version>${nagisa.version}</version>
+        </dependency>
+
+
+        <!-- apache-commons -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
