实现了函数声明和调用

--- a/nagisa-interceptor/pom.xml
+++ b/nagisa-interceptor/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>nagisa-frontend</artifactId>
             <version>${nagisa.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.nuclearg.nagisa</groupId>
+            <artifactId>nagisa-rtlib</artifactId>
+            <version>${nagisa.version}</version>
+        </dependency>
 
         <!-- junit -->
         <dependency>
